force-app/main/default/objects/B2B__c/B2B__c.object-meta.xml
<CustomObject>
    <label>B2B</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Service/Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>