force-app/main/default/objects/B2B__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>B2B</relationshipLabel>
    <relationshipName>B2B</relationshipName>
    <type>Lookup</type>
</CustomField>