force-app/main/default/objects/B2B__c/fields/Service_Solution__c.field-meta.xml
<CustomField>
    <fullName>Service_Solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service/Solution</label>
    <type>TextArea</type>
</CustomField>