force-app/main/default/objects/B2B__c/fields/UHG_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>UHG_Business_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHG Business Segment</label>
    <type>TextArea</type>
</CustomField>