force-app/main/default/objects/B2B__c/fields/UHG_Buyer_or_Decision_Make__c.field-meta.xml
<CustomField>
    <fullName>UHG_Buyer_or_Decision_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHG Buyer or Decision Maker</label>
    <type>TextArea</type>
</CustomField>